Many bug fixes; added slideshow feature
Lots of new things were changed.
1. Buttons are now always visible but are transparent. They will change
color on hover.
2. There is a slideshow button that shows a small slideshow of photos
on the screen.
3. Alignment fixes on mobile screens where the image would not align to
the top of each row.
4. Clear cache meta tag

--- a/style.css
+++ b/style.css
@@ -133,11 +133,12 @@ body {
 .card {}
 
 .image {
+    margin-top: 0;
     height: 13em;
 }
 
 .image img {
-    height: 100%;
+    max-height: 100%;
     width: 100%;
     object-fit: contain;
 }
@@ -149,7 +150,6 @@ body {
 
 .rowText {
     min-height: 15em;
-    /*    height: 15em;*/
 }
 
 .rowTitle {
@@ -166,7 +166,21 @@ body {
 }
 
 .moreBtn {
-    opacity: 0;
+    opacity: 1;
+    background-color: transparent;
+    border-style: solid;
+    border-width: 1px;
+    border-color: grey;
+}
+
+.moreBtn:hover {
+    border-color: transparent;
+}
+
+.slideShow {
+    height: 0px;
+    width: 0px;
+    display: none;
 }
 
 .card-image img {
